--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^12.12.25",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
-    "@types/redux": "^3.6.0"
+    "@types/redux": "^3.6.0",
+    "@types/uuid": "^3.4.6"
   }
 }
