--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "typescript": "^3.7.5",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^3.4.6"
   }
