--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "typescript": "^3.7.5",
     "uuid": "^3.4.0"
   },
