--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@types/node": "^12.12.25",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "chartist": "^0.11.4",
+    "lodash": "^4.17.15",
     "material-table": "^1.57.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-chartist": "^0.14.3",
     "react-dom": "^16.12.0",
+    "react-grid-layout": "^0.18.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "typescript": "^3.7.5",
@@ -47,6 +51,8 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.149",
+    "@types/react-grid-layout": "^0.17.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
