--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/chartjs": "0.0.31",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.25",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "chartist": "^0.11.4",
+    "chart.js": "^2.9.3",
     "lodash": "^4.17.15",
     "material-table": "^1.57.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
-    "react-chartist": "^0.14.3",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-grid-layout": "^0.18.2",
     "react-redux": "^7.1.3",
