--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
-    "@types/uuid": "^3.4.6"
+    "@types/uuid": "^3.4.6",
+    "gulp": "^4.0.2"
   }
 }
