--- a/package.json
+++ b/package.json
@@ -44,16 +44,8 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   },
   "devDependencies": {
     "@types/lodash": "^4.14.149",
@@ -62,6 +54,11 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^3.4.6",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-json-editor": "^2.5.4",
+    "gulp-shell": "^0.8.0",
+    "gulp-zip": "^5.0.1",
+    "jsftp": "^2.1.3",
+    "puppeteer": "^3.0.0"
   }
 }
