--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@types/node": "^12.12.25",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "chart.js": "^2.9.3",
-    "lodash": "^4.17.15",
+    "chart.js": "^2.9.4",
+    "lodash": "^4.17.21",
     "material-table": "^1.57.2",
-    "moment": "^2.24.0",
+    "moment": "^2.29.4",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
@@ -44,8 +44,16 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
     "@types/lodash": "^4.14.149",
@@ -53,12 +61,6 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
-    "@types/uuid": "^3.4.6",
-    "gulp": "^4.0.2",
-    "gulp-json-editor": "^2.5.4",
-    "gulp-shell": "^0.8.0",
-    "gulp-zip": "^5.0.1",
-    "jsftp": "^2.1.3",
-    "puppeteer": "^3.0.0"
+    "@types/uuid": "^3.4.6"
   }
 }
