--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "financier",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://MaksimKotau.github.io/financier",
+  "private": false,
   "dependencies": {
     "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.2",
@@ -17,6 +18,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "chart.js": "^2.9.4",
+    "gh-pages": "^4.0.0",
     "lodash": "^4.17.21",
     "material-table": "^1.57.2",
     "moment": "^2.29.4",
@@ -31,6 +33,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
+    "save-dev": "0.0.1-security",
     "typescript": "^3.7.5",
     "uuid": "^3.4.0"
   },
@@ -38,7 +41,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
